# handler/deleteOpening.go
@@ -8,6 +8,18 @@ import (
 	"github.com/gumeeee/go-jobs-api/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Sumary Delete Opening
+// @Description Delete a job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening identification"
+// @Success 200 {object} DeleteOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /openings [delete]
 func DeleteOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
